@startuml

class House
note top of House : 产品
class HouseBuilder{

     #  house: House = new House();
     +   buildBasic():void
     +   buildWalls():void
     +   roofed():void
     +   build():House
}
HouseBuilder *-- House: 组合
class CommonHouseBuilder extends HouseBuilder{
}
class HighHouseBuilder extends HouseBuilder{
}
class HouseDirector{
    # houseBuilder:HouseBuilder
}

HouseDirector o-- HouseBuilder: 聚合
class Client
Client ..> HouseDirector: 依赖
Client ..> CommonHouseBuilder: 依赖
Client ..> HighHouseBuilder: 依赖

@enduml